--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -54,7 +54,32 @@
 </div>
 <div class="card card-overwrite" data-aos="fade-up">
     <div class="overflow-div">
-        <div class="tmb acopon-dev ">
+        <div class="tmb barbershop-dev">
+            <div class="card-overlay">
+                <div class="cta-btns">
+                    <a href="https://barbershopbar.com" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
+                            Live</button></a>
+                    <a href="https://https://github.com/RojoRevolution/barbershop-bar" target="_blank"
+                        rel="noopener"><button class="btn text-light BtnStyles">View
+                            GitHub</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-content"">
+            <div class=" categories">
+        <span class="project-chip">HTML</span>
+        <span class="project-chip">CSS</span>
+        <span class="project-chip">Javascript</span>
+        <span class="project-chip">CSS & JS Animations</span>
+    </div>
+    <h3>Landing page for The Barbershop, a craft beer and wine bar located in Dripping Springs, TX</h3>
+</div>
+</div>
+<div class="card card-overwrite" data-aos="fade-up">
+    <div class="overflow-div">
+        <div class="tmb acopon-dev">
             <div class="card-overlay">
                 <div class="cta-btns">
                     <a href="https://acoponbrewing.com/" target="_blank" rel="noopener"><button
@@ -73,7 +98,6 @@
         <span class="project-chip">CSS</span>
         <span class="project-chip">Javascript</span>
         <span class="project-chip">jQuery</span>
-        <span class="project-chip">Node</span>
     </div>
     <h3>Landing page for a Acopon Brewing Co., just outside of Austin, Tx.</h3>
 </div>
@@ -102,33 +126,6 @@
         <span class="project-chip">REST API</span>
     </div>
     <h3>Group project utlizing multiple API's to check the weather and give you a list of local breweries</h3>
-</div>
-</div>
-<div class="card card-overwrite" data-aos="fade-up">
-    <div class="overflow-div">
-        <div class="tmb weather">
-            <div class="card-overlay">
-                <div class="cta-btns">
-                    <a href="https://rojorevolution.github.io/006-Weather-Dashboard/" target="_blank"
-                        rel="noopener"><button class="btn text-light BtnStyles">View
-                            Live</button></a>
-                    <a href="https://github.com/RojoRevolution/006-Weather-Dashboard" target="_blank"
-                        rel="noopener"><button class="btn text-light BtnStyles">View
-                            GitHub</button></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card-content"">
-        <div class=" categories">
-        <span class="project-chip bootcamp">Student Project</span>
-        <span class="project-chip">HTML</span>
-        <span class="project-chip">Bootstrap</span>
-        <span class="project-chip">Javascript</span>
-        <span class="project-chip">REST API</span>
-        <span class="project-chip">Local Storage</span>
-    </div>
-    <h3>A Wheather App project using serverside API's and local storage.</h3>
 </div>
 </div>
 <div class="card card-overwrite" data-aos="fade-up">
