--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -60,8 +60,8 @@
                     <a href="https://barbershopbar.com" target="_blank" rel="noopener"><button
                             class="btn text-light BtnStyles">View
                             Live</button></a>
-                    <a href="https://https://github.com/RojoRevolution/barbershop-bar" target="_blank"
-                        rel="noopener"><button class="btn text-light BtnStyles">View
+                    <a href="https://github.com/RojoRevolution/barbershop-bar" target="_blank" rel="noopener"><button
+                            class="btn text-light BtnStyles">View
                             GitHub</button></a>
                 </div>
             </div>
