updated title in about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,8 +35,9 @@
                                     to
                                     always be a facilitator for everyone involved.<br><br>
 
-                                    Currently I am employed full-time as a Product Designer with <a href="bevy.com"
-                                        target="_blank" rel="noopener noreferrer">Bevy</a>, and I continue to freelance
+                                    Currently I am employed full-time as a Senior Product Designer with <a
+                                        href="bevy.com" target="_blank" rel="noopener noreferrer">Bevy</a>, and I
+                                    continue to freelance
                                     in my spare time with an
                                     emphasis in
                                     the
