updated tags in dev projects

--- a/views/partials/dev-portfolio.ejs
+++ b/views/partials/dev-portfolio.ejs
@@ -17,11 +17,11 @@
         </div>
         <div class="card-content"">
             <div class=" categories">
-            <span class="project-chip bootcamp">Student Project</span>
             <span class="project-chip">MongoDB</span>
             <span class="project-chip">Express</span>
             <span class="project-chip">React</span>
             <span class="project-chip">Node</span>
+            <span class="project-chip">REST API</span>
         </div>
         <h3>My Capstone project for a web dev
             bootcamp, this MERN Application was built to log your job search.</h3>
@@ -119,7 +119,6 @@
     </div>
     <div class="card-content"">
         <div class=" categories">
-        <span class="project-chip bootcamp">Student Project</span>
         <span class="project-chip">HTML</span>
         <span class="project-chip">Foundation</span>
         <span class="project-chip">Javascript</span>
@@ -145,7 +144,6 @@
     </div>
     <div class="card-content"">
         <div class=" categories">
-        <span class="project-chip bootcamp">Student Project</span>
         <span class="project-chip">HTML</span>
         <span class="project-chip">Bootstrap</span>
         <span class="project-chip">Javascript</span>
