removed social links

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,6 @@
                 <section id="postHero" class="container-flex padding-top-200">
                     <div class="container" data-aos="fade-up">
                         <h1>Howdy, I'm David Rojo.</h1>
-                        <h3 class="text-center">I design and build unique brands and digital products.</h2>
                     </div>
                     <div class="container p-5">
                         <div class="row">
@@ -156,12 +155,8 @@
                                     Me
                                     An
                                     Email</button></a>
-                            <a href="https://www.instagram.com/rojorevolution/" target="new"><button
-                                    class="btn text-light m-3 BtnStyles">Find me on Instagram</button></a>
-                            <a href="https://www.linkedin.com/in/davidrojo/" target="new"><button
-                                    class="btn text-light m-3 BtnStyles">Find me on LinkedIn</button></a>
                             <a href="https://github.com/RojoRevolution" target="new"><button
-                                    class="btn text-light m-3 BtnStyles">Find me on GitHub</button></a>
+                                    class="btn text-light m-3 BtnStyles">Visit my GitHub</button></a>
                         </div>
                     </div>
                 </section>
