Updated about text and work history on about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,26 +34,12 @@
                                     to
                                     always be a facilitator for everyone involved.<br><br>
 
-                                    Currently I am employed full-time as a Senior Product Designer with <a
-                                        href="bevy.com" target="_blank" rel="noopener noreferrer">Bevy</a>, and I
-                                    continue to freelance
-                                    in my spare time with an
-                                    emphasis in
-                                    the
-                                    craft beer industry. The majority of my freelance projects are from repeat clients,
-                                    some
-                                    of
-                                    which I have been working with for close to a decade. In March of 2021, I completed
-                                    a
-                                    full-stack web development bootcamp offered through UT Austin, and am currently
-                                    mostly interested in expanding my knowledge and experience in front-end
-                                    development..<br><br>
-
-                                    Outside of designing and coding, you can catch me creating music which is probably
-                                    not fit for
-                                    human
-                                    consumption. In the pre-Covid19 world, you would also find me at local Heavy Metal
-                                    shows, festivals and traveling as much as possible.</p>
+                                    Outside of designing and coding, you can catch me creating music, at local Heavy
+                                    Metal
+                                    shows, festivals and traveling as much as possible.
+                                    <br><br>
+                                    <strong>I am currently not taking on new projects.</strong>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +74,8 @@
                             <div class="col-md-8">
                                 <ul id="designSkills">
                                     <li data-aos="fade-up">
-                                        <h3>Senior Product Designer | Apr 2021 - Present</h3>
-                                        <p>Bevy | Remote</p>
+                                        <h3>VP of Design | Dec 2022 - Present</h3>
+                                        <p>DentalRay Inc. | Remote</p>
                                     </li>
                                     <li data-aos="fade-up">
                                         <h3>Freelance Art Director, Illustrator, Designer, Developer | Jan 2009 -
@@ -97,8 +83,13 @@
                                         </h3>
                                         <p>RojoRevolution | Remote / Austin, TX.</p>
                                     </li>
+                                    <hr>
+                                    <li data-aos="fade-up">
+                                        <h3>Senior Product Designer | Apr 2021 - Dec 2022</h3>
+                                        <p>Bevy | Remote</p>
+                                    </li>
                                     <li>
-                                        <hr>
+
                                     </li>
                                     <li data-aos="fade-up">
                                         <h3>Lead Designer | August 2014 - June 2019</h3>
