updated interior navigation to only home and about

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,20 +22,16 @@
     </div>
     <nav id="navIntro">
         <ul>
-            <li class="navli-intro"><a href="/design-projects"> Design</a></li>
-            <li class="navli-intro"><a href="/dev-projects"> Code</a></li>
+            <li class="navli-intro"><a href="/"> Home</a></li>
             <li class="middle">RojoRevolution</li>
             <li class="navli-intro"><a href="/about"> About</a></li>
-            <li class="navli-intro"><a href="/about#contact">Contact</a></li>
         </ul>
     </nav>
     <nav id="navContent" class="hide">
         <ul>
-            <li class="navli-content"><a href="/design-projects"> Design</a></li>
-            <li class="navli-content"><a href="/dev-projects"> Code</a></li>
+            <li class="navli-content"><a href="/"> Home</a></li>
             <li class="middle">RojoRevolution</li>
             <li class="navli-content"><a href="/about"> About</a></li>
-            <li class="navli-content"><a href="/about#contact">Contact</a></li>
         </ul>
     </nav>
 </header>
