--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -6,10 +6,7 @@
     </div>
     <ul>
         <li>
-            <a href="/design-projects">Design</a>
-        </li>
-        <li>
-            <a href="/dev-projects">Development</a>
+            <a href="/design-projects">Home</a>
         </li>
         <li>
             <a href="/about">About</a>
